finished home page

--- a/teampulse/templates/gui/index.html
+++ b/teampulse/templates/gui/index.html
@@ -6,7 +6,7 @@
         <p>foo</p>
     {% else %}
         <main class="container">
-            <img src="{ static 'images/logo.png' }" alt="TeamPulse Logo" class="logo" />
+            <img src="{% static 'images/logo.png' %}" alt="TeamPulse Logo" class="logo" />
             <h1>TeamPulse</h1>
             <p class="tagline">Stay in sync. Keep on pulse.</p>
             <a href="#" class="btn">Log in</a>
