--- a/teampulse/templates/gui/index.html
+++ b/teampulse/templates/gui/index.html
@@ -9,7 +9,7 @@
             <img src="{% static 'images/logo.png' %}" alt="TeamPulse Logo" class="logo" />
             <h1>TeamPulse</h1>
             <p class="tagline">Stay in sync. Keep on pulse.</p>
-            <a href="#" class="btn">Log in</a>
+            <a href="{% url 'accounts:login' %}" class="btn">Log in</a>
         </main>
     {% endif %}
 {% endblock %}
